--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 description = "A Rust wrapper around the MultiversX chain simulator CLI"
 repository = "https://github.com/gfusee/mx-chain-simulator-interface-rs"
 edition = "2021"
-include = ["assets/**/*"]
+include = ["src", "assets/**/*"]
 categories = ["cryptography::cryptocurrencies"]
 license = "GPL-3"
 keywords = ["multiversx", "localnet", "blockchain", "testnet", "simulator"]
