--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,6 @@ toml = "0.8.11"
 tempfile = "3.10.1"
 include_dir = "0.7.3"
 nix = { version = "0.28.0", features = ["signal"] }
+
+[build-dependencies]
+reqwest = "0.12.2"
