--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -1,13 +1,10 @@
 [package]
 name = "mx-chain-simulator-interface-config-rs"
 version = "0.0.1"
+description = "Configuration files for mx-chain-simulator-interface-rs"
+repository = "https://github.com/gfusee/mx-chain-simulator-interface-rs"
 edition = "2021"
-include = [
-    "src",
-    "assets/**/*"
-]
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-include_dir = "0.7.3"
+include = ["src", "assets/**/*"]
+categories = ["cryptography::cryptocurrencies"]
+license = "GPL-3"
+keywords = ["multiversx", "localnet", "blockchain", "testnet", "simulator"]
